--- a/src/components/RightSidebar/RightSidebar.module.css
+++ b/src/components/RightSidebar/RightSidebar.module.css
@@ -1,5 +1,7 @@
 .sidebar {
   display: flex;
+  position: relative;
+  z-index: 10;
   min-width: 0;
   height: 100%;
   overflow: visible;
